fix: resolve header ui alignment

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -48,6 +48,8 @@
 
   &__nav {
     margin: 0 20px 0 auto;
+    align-items: center;
+    display: flex;
 
     &:hover {
       .header__link {
